Major upgrade: Add comprehensive response database with randomization and fix agent ID

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
   <df-messenger
     intent="WELCOME"
     chat-title="Chatbot-DaLat"
-    agent-id="YOUR-AGENT-ID"
+    agent-id="d8a0be4c-3dd4-4e9b-801d-207cc4703c99"
     language-code="vi"
   ></df-messenger>
 </body>
